# toast-fraud-guardian

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
app/: main.py
app/agents/: __init__.py  dispute_workflow.py
app/api/: __init__.py  admin.py  disputes.py  scoring.py
app/core/: __init__.py  config.py  database.py  logging.py  observability.py  redis_client.py  security.py
app/integrations/payments/: __init__.py  base.py  square_adapter.py  stripe_adapter.py  toast_adapter.py
app/models/: orm.py  schemas.py
app/services/: dispute_service.py  evidence_service.py  llm_service.py
app/utils/: __init__.py
data/: prometheus.yml
docs/: ADR.md  API.md  ARCHITECTURE.md  RUNBOOK.md
docs/diagrams/: 01-system-context.md  02-risk-evaluation-sequence.md  03-agent-workflow-state.md  04-chargeback-flow-sequence.md  05-model-architecture.md  06-feature-engineering.md  07-adapter-pattern.md  08-data-model.md  09-deployment-topology.md  10-pci-security-boundaries.md  11-evidence-decision-flow.md  12-training-feedback-loop.md  13-celery-task-routing.md  14-data-retention-gdpr.md  15-cicd-pipeline.md  16-dispute-lifecycle.md  README.md
frontend/: dashboard.py
k8s/: api-deployment.yaml  base.yaml  worker-deployment.yaml
ml/export/: to_onnx.py
ml/inference/: features.py  scoring_engine.py
ml/training/: model.py  train.py
tests/: conftest.py
tests/integration/: test_scoring_api.py  test_webhook_flow.py
tests/unit/: test_adapters.py  test_decision_engine.py  test_llm_service.py  test_models.py  test_scoring.py  test_security.py  test_utils.py
workers/: beat_schedule.py  monitoring.py  retention.py  tasks.py
